--- a/Trabalho-final/style.css
+++ b/Trabalho-final/style.css
@@ -8,24 +8,33 @@ header {
     display: flex;
     align-items: center;
     padding-top: 20px;
+    position: fixed;
+    z-index: 1000;
+    background-color: #888;
+    /* fundo cinza opaco */
+    color: white;
+    padding: 20px 0;
+    text-align: center;
+    font-family: sans-serif;
+
 }
 
 .logo {
     width: 120px;
     /* Ajuste aqui o tamanho */
-    height: auto;
+    height: 10vh;
     /* Mantém proporção */
-    margin-left: 400px;
+    margin-left: 440px;
 }
 
 .menu ul {
     display: flex;
     list-style: none;
-    gap: 40px;
+    gap: 50px;
     /* Espaço entre os menus */
     padding: 0;
     margin: 0;
-    margin-left: 100px;
+    margin-left: 150px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 12px;
 }
@@ -40,6 +49,28 @@ header {
     height: auto;
 }
 
-.carousel{
-    
+.carousel {
+    width: 100vw;
+    height: auto;
+    overflow: hidden;
+}
+
+.carousel-item {
+    height: 100vh;
+    object-fit: cover;
+    /* ajustar o conteúdo dentro de um container, cobrindo totalmente o espaço, sem distorcer. */
+}
+
+.btn-contato {
+    text-decoration: none;
+    background-color: rgb(255, 255, 255);
+    border: 0;
+    border-radius: 30px;
+    display: flex;
+    width: 12vw;
+    border: black 2px solid;
+}
+
+.btn-contato a{
+    color: black;
 }
